test/files/neg/nullary-override.check
nullary-override.scala:4: warning: non-nullary method overrides nullary method
class B extends A { override def x(): Int = 4 }
                                 ^
1 warning
error: No warnings can be incurred under -Werror.
